@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2003/08/18 14:29:13 taca Exp $
+$NetBSD: distinfo,v 1.4 2004/11/29 14:31:45 uebayasi Exp $
 
-SHA1 (mew-3.3.tar.gz) = 173189ab30d95972c3dc0dc2367ef1fdd6abf5c7
-Size (mew-3.3.tar.gz) = 840756 bytes
+SHA1 (mew-4.1.tar.gz) = 4a89e7d32acd5bfae10aae40b4c5728262f2c750
+Size (mew-4.1.tar.gz) = 899279 bytes
